# maker_bot

backend/: .gitignore  README.md  backend.py  modal_get_started.py  pyproject.toml
backend/rag/pipeline/: 1.extract_pdfs_to_text.py  2.chunk_texts.py  3.embed_chunks.py
frontend/: README.md  package-lock.json  tsconfig.app.json  tsconfig.json
frontend/src/: App.vue
frontend/src/components/: Chatbox.vue
